# space-game

./: .gitignore  .gitmodules  BUILD.md  FAQ.md  PHILOSOPHY.md  README.md  makefile  meson.build
.github/workflows/: meson.yaml
src/: def.h  main.c  meson.build
src/core/: transform.h
src/physics/: collisions.h  quadtree.h  shape.h
src/player/: character.h  input.h
src/rendering/: camera.h  rendering.h
